k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-project
  namespace: dev
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: devops-project
  template:
    metadata:
      labels:
        app: devops-project
    spec:
      containers:
        - name: devops-project
          image: devops-project:1.0.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - name: app-storage
              mountPath: /data

          livenessProbe:
            httpGet:
              path: /devops-project/
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /devops-project/
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: devops-project-pvc
