k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-project-service
  namespace: dev
spec:
  selector:
    app: devops-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
